client/app/global.scss
* {
    margin: 0;
    padding: 0;
    outline: 0;
    box-sizing: border-box;
    font-family: "Open Sans", sans-serif;
    color: #fff;
}

#root {
    margin: 0 auto;
}

body {
    font-family: "Open Sans", sans-serif;
    position: relative;
    background: transparent;

    a {
      color: #18d26e;
      text-decoration: none;

      :hover {
        color: #35e888;
      }
    }


    h1, h2, h3, h4, h5, h6 {
      font-family: "Raleway", sans-serif;
    }

    &::before {
      content: "";
      position: fixed;
      background: #040404 url("/bg.jpg") top right no-repeat;
      background-size: cover;
      left: 0;
      right: 0;
      top: 0;
      height: 100vh;
      z-index: -1;
    }
}




@media (min-width: 1024px) {
    body::before {
        background-attachment: fixed;
    }
}

@media(max-width: 1024px) {
  body::before {
    background: #191919;
  }
}

@media(min-width: 2560px) {
  body::before {
    background: #040404 url("../public/bg-ultrawide.jpg") top right no-repeat;
  }
}

section {
  overflow: hidden;
  position: absolute;
  width: 100%;
  top: 140px;
  bottom: 100%;
  opacity: 0;
  transition: ease-in-out 0.4s;
  z-index: 2;
}

section.section-show {
  top: 100px;
  bottom: auto;
  opacity: 1;
}

section .container {
  background: rgba(0, 0, 0, 0.9);
  padding: 30px;
}

@media (max-width: 768px) {
  section {
    top: 120px;
  }

  section.section-show {
    top: 80px;
  }
}

.section-title h2 {
  font-size: 14px;
  font-weight: 500;
  padding: 0;
  line-height: 1px;
  margin: 0 0 20px 0;
  letter-spacing: 2px;
  text-transform: uppercase;
  color: #aaaaaa;
  font-family: "Poppins", sans-serif;
}

.section-title h2::after {
  content: "";
  width: 120px;
  height: 1px;
  display: inline-block;
  background: #4ceb95;
  margin: 4px 10px;
}

.section-title p {
  margin: 0;
  margin: -15px 0 15px 0;
  font-size: 36px;
  font-weight: 700;
  text-transform: uppercase;
  font-family: "Poppins", sans-serif;
  color: #fff;
}

